--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "flow-bin": "^0.76.0",
     "rimraf": "^2.6.2"
   },
-  "author": "Bannerets <save14@protonmail.com>",
+  "author": "Bannerets <comonoid@protonmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
