--- a/packages/javascript/package.json
+++ b/packages/javascript/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tdlib-typings",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "Flow and TypeScript typings for TDLib",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Bannerets <save14@protonmail.com>",
+  "author": "Bannerets <comonoid@protonmail.com>",
   "license": "MIT",
   "keywords": [
     "tdl",
